syntax="proto3";

package dcf;

enum WorkerStatus {
  UNKNOWN = 0;
  READY = 1;
  ERROR = 2;
  SHUTDOWN = 3;
}

message RegisterWorkerRequest {
  string endpoint = 1;
}

message RegisterWorkerResponse {
}

message UnregisterWorkerRequest {
  string endpoint = 1;
}

message UnregisterWorkerResponse {
}

message MasterExecRequest {
  // 使用 objpack 包装 SerializedFunction，参数为({dispatchWork})，返回任意可序列化结果
  bytes func = 1;
}

message MasterExecResponse {
  // 使用 msgpack 包装返回值
  bytes result = 1;

  // 出错时包含error消息
  string errorMessage = 2;
}

service MasterService {
  rpc registerWorker(RegisterWorkerRequest) returns(RegisterWorkerResponse);

  rpc unregisterWorker(UnregisterWorkerRequest) returns(UnregisterWorkerResponse);

  rpc exec(MasterExecRequest) returns(stream MasterExecResponse);
}

message WorkerExecRequest {
  // 使用 objpack 包装 SerializedFunction，无参数，返回任意可序列化结果
  bytes func = 1;
}

message WorkerExecResponse {
  // 使用 msgpack 包装返回值
  bytes result = 1;
}

service WorkerService {
  rpc exec(WorkerExecRequest) returns(WorkerExecResponse);
}
